--- a/Part-2/phonebook/package.json
+++ b/Part-2/phonebook/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "server" : "json-server -p3000 --watch db.json"
   },
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^1.3.4",
     "react": "^18.2.0",
