--- a/Part-3/Phonebook_Backend/package.json
+++ b/Part-3/Phonebook_Backend/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "build:ui": "rm -rf dist && cd ../../Part-2/phonebook && npm run build -y && cp -r dist ../../Part-3/Phonebook_Backend",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "fly logs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abdulbasit Abdullahi",
