--- a/Part-4/package.json
+++ b/Part-4/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodejs index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [
     "expressjs",
@@ -22,5 +22,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
