--- a/Part-3/Phonebook_Backend/package.json
+++ b/Part-3/Phonebook_Backend/package.json
@@ -10,7 +10,7 @@
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Abdulbasit Abdullahi",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0"
   },
