--- a/Part-4/package.json
+++ b/Part-4/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   },
